@@ -11,6 +11,7 @@ override-finder: when firewall is not available, instead of exit wit error, prog
 bugfix:
 - added checks to prevent crash when trying to resolve an IPv6 object into an IPv4 mapping
 - fixed a crash when exporting PBF rules to HTML in  rules-edit utility
+- fixed a crash when replacing an object used in a DNAT with another object
 
 
 1.5.10
